--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <button onclick="verificarChute2()" class="button">Alert</button>
         <button onclick="chuteCidade()" class="button">Prompt</button>
         <button onclick="chuteMath()" class="button">Soma</button>
+        <button onclick="AreaTri()" class="button">Área do triangulo</button>
+
     </main>
 
       <script src="app.js"></script>
